# 4paradigm

./: README.md
automl/: eid_count.pkl  eid_feature.pkl  shipin_count.pkl  shipin_feature.pkl  test.py  w_main.py  w_main_backup.py  w_main_backup_all_data.py  w_train copy_bacup_up_auc_1.py  w_train.py  w_train_backup.py  w_train_backup_0910.py  w_train_backup_0910_bangyi.py  w_train_myself.py  w_train_myself_backup_0910.py
mutimodel/: Dockerfile  build-submit.sh  build.sh  config.yaml  config1.yaml  filter1.py  filter2.py  internvl_tool.py  main.py  main2.py  main3.py  main_40b.py  main_context.py  main_esb.py  main_esb_backup.py  main_esb_format-all.py  main_gyd.py  test.py  (+6 more)
nl2sql_ft/: Dockerfile  auto-submit.sh  build-submit.sh  client.py  client_loacl_test.py  config.yaml  config_backup_0909.yaml  config_bce.yaml  config_hui_bangyi.yaml  config_origin.yaml  config_origin_ft.yaml  data.json  delete_table_null_attribute.py  delete_table_null_attribute_one_null.py  example  main.py  prompt.py  pyproject.toml  ser.py  server.py  server_0820.py  server_0908.py  server_10dataexample.py  server_10dataexample_10qryexample.py  server_1data_nqry_random_no_random.py  server_1data_nqry_random_no_random_split_prompt1.py  server_backup.py  server_backup0909.py  server_bangyi.py  server_bangyi_analyze_time.py  server_bangyi_embedding_bce.py  server_bangyi_embedding_bge.py  server_bangyi_my_simlar.py  server_bangyi_mysialr_bce.py  server_bangyi_random_half_traindata_3qry.py  server_before.py  server_cluster.py  server_get_similar_data1.py  server_load_model_from_url.py  server_local_test.py  (+12 more)
